CHANGES IN VERSION 1.49.4
-------------------------

NEW FEATURES

    o new '.status_file' in `seqParallel()` for controlling the display of the
      status of child processes

    o enhance workload balancing within `seqParallel()`

    o new 'balancing=NA' in `seqAlleleFreq()`, `seqAlleleCount()`,
      `seqGetAF_AC_Missing()` (using workload balancing by default)


CHANGES IN VERSION 1.49.3
-------------------------

UTILITIES

    o `seqDigest()` allows a GDS file name in the first argument

    o a new option 'parallel' in `seqDigest()`

    o `seqVCF2GDS()` and `seqBED2GDS()`: save the gds node 'chromosome'
      before 'position'

    o `seqAddValue(, varnm="annotation/filter", desp=...)` adds 'Description'
      via the argument 'desp'


CHANGES IN VERSION 1.48.0
-------------------------

NEW FEATURES

    o `seqAddValue()`: use bit1 for a logical vector; new argument
      'use_float32' for storing double

    o new argument 'start' in `seqResetVariantID()`

    o new argument 'digest' in `seqRecompress()` to add MD5 hash codes

    o `seqGetData(, "$chromosome")` returns chromosome codes in an object of
      'S4Vectors::Rle'

    o `seqGetData(, .tolist=NA)` returns an extended list defined in IRanges
      (e.g., IntegerList) when it is applicable

    o `seqListVarData(, useList=TRUE)` returns an extended list defined in
      IRanges

UTILITIES

    o Tweak display in `seqResetVariantID()`

    o use `crayon::silver()` instead of `crayon::blurred()` in the display since
      RStudio blurs the screen output

BUG FIXES

    o `seqBlockApply()` should recover the filter when the user-specified
      function fails


CHANGES IN VERSION 1.46.2
-------------------------

UTILITIES

    o `seqVCF_Header()` allows multiple cores to calculate the total number of
      variants when 'getnum=TRUE' (the Rsamtools package should be installed);
      `seqVCF2GDS()` is faster when obtaining the number of variants for
      splitting files.
