@@ -9,7 +9,14 @@ NEW FEATURES
     o enhance workload balancing within `seqParallel()`
 
     o new 'balancing=NA' in `seqAlleleFreq()`, `seqAlleleCount()`,
-      `seqGetAF_AC_Missing()` (using workload balancing by default)
+      `seqGetAF_AC_Missing()`, `seqSetFilterCond()`, `seqUnitFilterCond()`
+      (using workload balancing by default)
+
+    o new '.balancing' in `seqBlockApply()`
+
+UTILITIES
+
+    o tweak the display of `seqGDS2BED()`
 
 
 CHANGES IN VERSION 1.49.3
